tests/checker/diagnostics/0919_gadt_operator_on_wrong_branch_06.ml.infer.expected
File "0919_gadt_operator_on_wrong_branch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0919_gadt_operator_on_wrong_branch_06 is not a valid module name.

File "0919_gadt_operator_on_wrong_branch_06.ml", line 11, characters 20-21:
11 |     | WBool_zeta -> x + 6
                         ^
Error: The value x has type a = bool but an expression was expected of type
         int
